--- a/pages/index.css
+++ b/pages/index.css
@@ -7,3 +7,5 @@
 @import url("../blocks/lead.css");
 @import url("../blocks/page.css");
 @import url("../blocks/photo-grid.css");
+@import url("../blocks/places.css");
+@import url("../fonts/inter.css");
